# motorola-contest

./: .gitignore  CMakeLists.txt  README.md
assets/: Car.mtl  car_prototype.glb  map_test_entities.txt  map_test_materials.txt  untitled.glb  wheel.mtl
src/: ai.cpp  ai.hpp  collidable.cpp  collidable.hpp  common.hpp  controller.cpp  controller.hpp  debug.cpp  debug.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  leaderboard.hpp  main.cpp  model_manager.cpp  model_manager.hpp  rigidbody.cpp  rigidbody.hpp  ui.cpp  ui.hpp  vehicle.cpp  vehicle.hpp  world.cpp  world.hpp
tests/: all-tests.cpp  rigidbody.cpp
